k8-calc/templates/http-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: output
  name: output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: output
  template:
    metadata:
      labels:
        app: output
    spec:
      containers:
      - name: output
        image: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: exch-vol
      volumes:
      - name: exch-vol
        persistentVolumeClaim:
          claimName: exch-vol
---
apiVersion: v1
kind: Service
metadata:
  name: output-service
spec:
  type: NodePort
  selector:
    app: output
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32000
