k8-calc/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8-calc-gateway
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: k8-calc-nginx-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
